navbar toggler icon visibility issue is fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,14 @@ h1 {
     color: var(--highlight-color);
 }
 
+.navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-toggler .navbar-toggler-icon {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
 /*hero*/
 #hero {
     background-image: url(../images/hero-image.png);
